minikube/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  ports:
  - port: 54321
    targetPort: 54321
    name: postgresql
    protocol: TCP
  # - port: metrics
  #   targetPort: 9100
  #   name: prometheus
  #   protocol: TCP

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: postgres-db-endpoint
  labels:
      kubernetes.io/service-name: postgres-db
addressType: IPv4
ports:
  - port: 54321
    name: postgresql
    appProtocol: http
    protocol: TCP
  # - port: 9100
  #   name: prometheus
  #   appProtocol: http
  #   protocol: TCP
endpoints:
  - addresses:
      - "192.168.64.1"
