minikube/docker-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-exporter
  labels:
    operated-prometheus: "true"
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 9417
    targetPort: 9417
    name: prom
    protocol: TCP
  # - port: metrics
  #   targetPort: 9100
  #   name: prometheus
  #   protocol: TCP

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: docker-exporter-endpoint
  labels:
      kubernetes.io/service-name: docker-exporter
addressType: IPv4
ports:
  - port: 9417
    name: ''
    appProtocol: http
    protocol: TCP
  # - port: 9100
  #   name: prometheus
  #   appProtocol: http
  #   protocol: TCP
endpoints:
  - addresses:
      - "192.168.64.1"
